syntax = "proto3";

package base;

message PingRequest {
    string name = 1;
}

message PingResponse {
    string value = 1;
}

service BaseService {
    rpc ping(PingRequest) returns (PingResponse);
}
